<resources>
    <string name="app_name">CainstructionQuiz</string>
    <string name="upbutton">Upbutton</string>
    <string name="title_activity_choice">ChoiceActivity</string>
    <string name="WelcomeTxt">Καλωσήρθατε στο Quiz</string>
    <string name="PlayTxt">Παίξε</string>
    <string name="CainTxt">Cainstruction</string>
    <string name="CainstructionQuiz">CainstructionQuiz</string>
    <string name="DescInputTxt">"Παρακαλώ διαλέξτε  με τι πράξη θέλετε να παίξετε:                               "</string>
    <string name="multi">X</string>
    <string name="Div">÷</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="menu_settings">Settings</string>
    <string name="about">About</string>
    <string name="math_process_descr">world_regions_description</string>
    <string name="math_proc">world_regions</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_main__play">Main_PlayActivity</string>
    <string name="question"></string>
    <string name="image_description">image_description</string>
    <string name="result">Παρακάτω εισήγαγε το αποτέλεσμα:</string>
    <string name="Check">Έλεγχος</string>
    <string name="results">%1$d Ανεπιτυχείς προσπάθειες, %2$.02f%% Ποσοστό Αποτυχίας</string>
    <string name="InsertHint">Εισαγωγή Αποτελέσματος...</string>
    <string name="howmuch">Πόσο κάνει:</string>
    <string name="title_activity_settings1">Settings</string>
    <string name="numberqs">"Ερώτηση 1$d από %10$d"</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="collist">color_list</string>
    <string name="colorist">color_list</string>
    <string name="Exit">Έξοδος</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="NoAlert">Οχι</string>
    <string name="YesAlert">Ναι</string>
    <string name="Qalert">Είστε σίγουροι οτι θέλετε να τερματίσετε την εφαρμογή;</string>
    <string name="Strogilopoihsh">***Στην περίπτωση της διέρεσης στρογγυλοποίησε το αποτέλεσμα (0.5 > 1 )</string>
    <string name="Login">Login</string>
    <string name="create">Create</string>
</resources>
